Se agrego el logo

--- a/frontend-optica/src/app/utils/header/header.component.html
+++ b/frontend-optica/src/app/utils/header/header.component.html
@@ -1,5 +1,8 @@
 <header class="header">
-  <div class="logo">OPTICA IA</div>
+  <!--<div class="logo">OPTICA IA</div>-->
+  <a routerLink="/" class="logo-container">
+    <img src="assets/img/icono-inicio.png" alt="Óptica IA" class="logo" />
+  </a>
 
   <nav class="menu">
     <a routerLink="/quiz">Inicio</a>
